# AsteriaCLI

./: .gitignore  LICENSE  README.md  migrate_gemini_schema.py  populate_agy_from_backup.py  populate_from_backup.py  pyproject.toml  requirements.txt  setup.py
asteria/: __init__.py  cli.py  constants.py  exceptions.py  logging_config.py  version.py
asteria/config/: __init__.py  manager.py
asteria/database/: __init__.py  connection.py
asteria/database/models/: __init__.py  agy.py  base.py  gemini.py
asteria/modules/: __init__.py
asteria/modules/agy/: __init__.py  commands.py  repository.py  service.py
asteria/modules/gemini/: __init__.py  commands.py  repository.py  runner.py  service.py
asteria/utils/: __init__.py  console.py  dt.py  editor.py  formatting.py  fuzzy.py
tests/: __init__.py  conftest.py  test_utils.py
tests/test_agy/: __init__.py  test_repository.py
tests/test_gemini/: __init__.py  test_repository.py
