[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asteriacli"
version = "0.1.0"
description = "A unified CLI for managing all AI-related workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Indrajit Ghosh", email = "indrajitghosh912@gmail.com"}]
keywords = ["cli", "ai", "gemini", "agy", "google-genai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Dependencies – taken from requirements.txt
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "toml>=0.10.2",
    "tomli-w>=1.0.0",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.25.1",
    "google-genai>=2.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
asteria = "asteria.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["asteria*"]
exclude = ["tests*"]
