[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asteria-cli"
version = "0.1.0"
description = "A unified CLI for managing AI-related workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Indrajit Ghosh", email = "indrajitghosh912@gmail.com"}
]
keywords = ["cli", "ai", "gemini", "workflow", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "toml>=0.10.2",
    "tomli-w>=1.0.0",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.25.1",
    "google-generativeai>=0.8.0",
    
    "python-dotenv>=1.0.0",
]

[project.scripts]
asteria = "asteria.cli:app"

[project.urls]
homepage = "https://github.com/indrajit912/AsteriaCLI"
repository = "https://github.com/indrajit912/AsteriaCLI"
tracker = "https://github.com/indrajit912/AsteriaCLI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["asteria*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
